<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/fragment_padding_top_bottom"
    android:paddingBottom="@dimen/fragment_padding_top_bottom"
    android:paddingLeft="@dimen/fragment_padding_left_right"
    android:paddingRight="@dimen/fragment_padding_left_right"
    android:clipToPadding="false"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_enterKiosk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_start_kiosk"
            android:layout_marginBottom="@dimen/fragment_padding_top_bottom"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_exitKiosk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_stop_kiosk"
            android:layout_marginBottom="@dimen/fragment_padding_top_bottom"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_reloadTiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_reload_tiles"
            android:layout_marginBottom="@dimen/fragment_padding_top_bottom"/>

        <Button
            android:id="@+id/button_clearData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_clear_data"
            android:layout_marginBottom="@dimen/fragment_padding_top_bottom"/>

        <CheckBox
            android:id="@+id/checkbox_pinEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_enable_pin"
            android:layout_marginBottom="@dimen/fragment_padding_top_bottom"
            android:visibility="gone"/>

        <smartassist.appreciate.be.smartassist.views.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:typeface="montserrat_light"
            android:textColor="@color/general_text"
            android:text="Versie 3"
            android:layout_marginBottom="@dimen/fragment_padding_top_bottom"
            android:visibility="gone"/>

        <smartassist.appreciate.be.smartassist.views.TextView
            android:id="@+id/textView_residence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:typeface="montserrat_light"/>

    </LinearLayout>

</ScrollView>