<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/top_bar"
             android:id="@+id/layout_topBar"/>

    <LinearLayout
        android:id="@+id/layout_calendarHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/fragment_padding_top_bottom"
        android:paddingTop="@dimen/fragment_padding_top_bottom"
        android:paddingLeft="@dimen/fragment_padding_left_right"
        android:paddingRight="@dimen/fragment_padding_left_right"
        android:layout_below="@id/layout_topBar"
        android:background="@color/general_theme"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageView_previousMonth"
            android:layout_width="@dimen/calendar_month_arrow"
            android:layout_height="@dimen/calendar_month_arrow"
            android:src="@drawable/arrow_left_white"
            android:layout_marginRight="@dimen/fragment_padding_left_right"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minWidth="@dimen/calendar_month_month_min_width"
            android:gravity="center">

            <smartassist.appreciate.be.smartassist.views.TextView
                android:id="@+id/textView_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:typeface="montserrat_regular"
                android:textSize="@dimen/calendar_month_year_text"
                android:textColor="@color/general_text_white"
                android:paddingRight="@dimen/calendar_month_year_padding"/>

            <smartassist.appreciate.be.smartassist.views.TextView
                android:id="@+id/textView_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:typeface="montserrat_light"
                android:textSize="@dimen/calendar_month_year_text"
                android:textColor="@color/general_text_white"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_nextMonth"
            android:layout_width="@dimen/calendar_month_arrow"
            android:layout_height="@dimen/calendar_month_arrow"
            android:src="@drawable/arrow_right_white"
            android:layout_marginLeft="@dimen/fragment_padding_left_right"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_calendar_toggle_background"
            android:padding="@dimen/calendar_toggle_padding">

            <smartassist.appreciate.be.smartassist.views.ToggleButton
                android:id="@+id/button_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/calendar_day"
                android:textOff="@string/calendar_day"
                app:typeface="montserrat_regular"
                style="@style/CalendarToggle"/>

            <smartassist.appreciate.be.smartassist.views.ToggleButton
                android:id="@+id/button_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/calendar_week"
                android:textOff="@string/calendar_week"
                app:typeface="montserrat_regular"
                style="@style/CalendarToggle"/>

            <smartassist.appreciate.be.smartassist.views.ToggleButton
                android:id="@+id/button_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/calendar_month"
                android:textOff="@string/calendar_month"
                app:typeface="montserrat_regular"
                style="@style/CalendarToggle"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view_calendarDivider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calendar_layout_divider_height"
        android:background="@color/calendar_divider"
        android:layout_below="@id/layout_calendarHeader"/>

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view_calendarDivider"/>

</RelativeLayout>